# knir-7

./: .gitignore  README.md  pyproject.toml
cfg/: CatSim.cfg  NS_Phantom_Descriptor.json  Phantom_Descriptor.json  Phantom_Descriptor_Water.json  Phantom_Generation.json  Phantom_Sample.cfg  Phantom_Sample_Water.cfg  Protocol_Sample_axial.cfg  Recon.cfg  Scanner_Sample_generic.cfg  adult_male_50percentile_chest.json
data_generation/: dro_generator.py  generate_data.py  utils.py
