[project]
name = "knir-7"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gecatsim>=1.4.4",
    "opencv-python>=4.10.0.84",
    "pandas>=2.2.3",
    "pygame>=2.6.1",
    "pyopengl>=3.1.7",
    "scikit-image>=0.25.0",
    "seaborn>=0.13.2",
    "voxelmap>=2.1.4",
]
